--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/ccali14/Volumes-CLI/issues"
   },
-  "homepage": "https://github.com/ccali14/Volumes-CLI#readme"
+  "homepage": "https://github.com/ccali14/Volumes-CLI#readme",
+  "dependencies": {
+    "commander": "^2.9.0",
+    "volumes": "^1.0.1"
+  }
 }
